--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,5 @@
             "Ps24love\\Widget": "src/"
         }
     },
-    "minimum-stability": "dev"
+    "minimum-stability": "dev-master"
 }
